--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body class="bg-gradient-to-r from-blue-200 to-blue-800 h-screen flex">
     <!-- Sidebar -->
-    <div class="w-1/4 bg-black text-white p-6 flex flex-col justify-between">
+    <div class="w-full md:w-1/4 bg-black text-white p-6 flex flex-col justify-between">
         <div>
             <div class="flex items-center mb-6">
                 <i class="fas fa-tree text-2xl mr-2"></i>
@@ -119,7 +119,7 @@
         </div>
     </div>
     <!-- Main Content -->
-    <div class="w-3/4 p-10 bg-green-500 flex flex-col">
+    <div class="w-full md:w-3/4 p-6 bg-green-500 flex flex-col">
         <div class="flex justify-end mb-6">
             <div id="currentPlan" class="bg-white text-black py-2 px-4 rounded">Plano Gratuito</div>
             <button id="changePlanBtn" class="bg-blue-500 text-white py-2 px-4 rounded">Trocar Plano</button>
