--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <i class="fas fa-search absolute right-4 top-3 text-gray-400"></i>
             </div>
             <div class="mb-6">
-                <h2 class="text-gray-400 mb-2">Category</h2>
+                <h2 class="text-gray-400 mb-2">Categoria</h2>
                 <ul>
                     <a href="telaartigoestufa.html" class="flex items-center justify-between py-2 px-4 bg-gray-800 rounded mb-2">
                         <span>Efeito Estufa</span>
